Cabal-Version: >= 1.2

Name:           sony-epub
Version:        0.1
Synopsis:       A few utilities for ePub tweaking for better reading experience on Sony PRS-350.
Description:
Author:         Tomas Janousek
Maintainer:     Tomas Janousek <tomi@nomi.cz>
License:        BSD3
Build-Type:     Simple

Executable epub-fixcss
    Main-is:            FixCSS/FixCSS.hs
    Build-Depends:      base >= 4, bytestring, filepath, zip-archive, stringsearch, directory
    GHC-Options:        -Wall -fno-warn-missing-signatures

Executable note2svg
    Main-is:            Note2Svg/Note2Svg.hs
    Build-Depends:      base >= 4, xml
    GHC-Options:        -Wall

-- vim:set et:
